--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #424E61;
+    background-color: #f1bc29;
     color: white;
 }
 *{
@@ -8,7 +8,7 @@ header {
 }
 
 .cabecalho {
-    background-color: #424E61;
+    background-color: #f1bc29;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -31,7 +31,36 @@ header {
 }
 
 .maquiagem{
-    background-image: linear-gradient(#56ecd3, #4480cf);
+    background-image: linear-gradient(#f1bc29, #df56d3);
     color: white;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.maquiagem-div-conteudo{
+    whidth: 35%;
+}
+
+.maquiagem-titulo{
+    padding: 24px 0;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+.maquiadora-imagem{
+    width: 360px;
+}
+
+.maquiadora-icone{
+    width: 34px;
+    padding: 12px 18px;
+}
+
+.maquiadoras-div{
+    text-align: center;
+    padding: 16px 0;
 }
