--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-header {
-    background-color:  #e97c17;
+header{
+    background-color: orange;
     color: white;
 }
 
 .cabecalho-imagem{
-    width: 20%;
+    width: 18%;
 }
 
-.cabecalho {
-    background-color: #e97c17;
+.cabecalho{
+    background-color: orange;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -19,7 +19,7 @@ header {
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 *{
@@ -27,16 +27,12 @@ header {
     padding: 0;
 }
 
-.maquiagemtitulo-imagem{
+.sobremaquiagem-imagem{
     width: 38%;
 }
 
-.maquiagem-imagem{
-    width: 25%;
-}
-
-.maquiagem{
-    background-image: linear-gradient(#f1bc29, #df56d3);
+.sobremaquiagem{
+    background-image: linear-gradient(orange, rgb(196, 41, 67));
     color: white;
     display: flex;
     justify-content: center;
@@ -44,36 +40,10 @@ header {
     padding: 24px 0;
 }
 
-.maquiagem-div-conteudo{
-    whidth: 35%;
+.sobremaquiagem-div-conteudo{
+    width: 35%;
 }
 
-.maquiagem-titulo{
+.sobremaquiagem-titulo{
     padding: 24px 0;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
-}
-
-.maquiadorauma-imagem{
-    width: 360px;
-    margin: 50px;
-}
-
-.maquiadoradois-imagem{
-    width: 360px;
-    margin: 50px;
-}
-
-.maquiadorauma-div-conteudo{
-    text-align: right;
-    display: flex;
-    padding: 16px 0;
-}
-
-.maquiadoradois-div-conteudo{
-    text-align: right;
-    display:flex;
-    padding: 16px 0;
 }
