--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header{
-    background-color: orange;
+    background-color: rgb(236, 143, 20);
     color: white;
 }
 
@@ -8,7 +8,7 @@ header{
 }
 
 .cabecalho{
-    background-color: orange;
+    background-color: rgb(236, 143, 20);
     color: white;
     display: flex;
     justify-content: space-around;
@@ -28,11 +28,11 @@ header{
 }
 
 .sobremaquiagem-imagem{
-    width: 38%;
+    width: 35%;
 }
 
 .sobremaquiagem{
-    background-image: linear-gradient(orange, rgb(196, 41, 67));
+    background-image: linear-gradient(rgb(236, 143, 20), rgb(236, 20, 128));
     color: white;
     display: flex;
     justify-content: center;
@@ -46,4 +46,84 @@ header{
 
 .sobremaquiagem-titulo{
     padding: 24px 0;
+}
+
+body{
+    font-family: 'poppins', sans-serif;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.marimaria-imagem{
+    width: 50%
+}
+
+.marimaria{
+    color: rgb(49, 49, 49);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.marimaria-div-conteudo{
+    text-align: justify;
+    margin: 50px;
+}
+
+.marimaria-titulo{
+    text-align: initial;
+    padding: 35px 0;
+}
+
+.marimaria-texto-um{
+    text-align: justify;
+    width: 60%;
+}
+
+.francinyehlke-imagem{
+    width: 50%;
+}
+
+.francinyehlke{
+    color: rgb(49, 49, 49);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+    margin: 50px;
+}
+
+.francinyehlke-div-conteudo{
+    text-align: justify;
+}
+
+.francinyehlke-titulo{
+    text-align: initial;
+}
+
+.francinyehlke-texto-um{
+    text-align: justify;
+    width: 60%;
+}
+
+.rodape{
+    background-color: rgb(236, 20, 128);
+    text-align: center;
+}
+
+.rodape-imagem{
+    height: 120px;
+    padding: 24px 0;
+}
+
+.nome-criador{
+    color: white;
+}
+
+.repositor{
+    color: white;
 }
